# etl-manager

./: .gitignore  README.md  pyproject.toml  sumario_2026-04-27_18-56.md
data/: etls-registry.json
docs/: developer-guide.md  session-context.md
src/: __init__.py  config.py  main.py
src/adapters/endpoints/destinations/: clickhouse.py
src/adapters/endpoints/sources/: connectorx_based.py  file_based.py
src/adapters/logging/: __init__.py  composite_logger.py  console_logger.py  decorator.py  file_logger.py
src/application/: __init__.py  decorators.py
src/application/orchestrators/: __init__.py  pipeline_orchestrator.py
src/application/use_cases/: __init__.py  _schema_validation.py  base_dest_etl.py  base_etl.py  base_source_etl.py  coberturas.py  coberturas_rv.py  organizadores.py  primas_automotores.py
src/domain/: __init__.py  exceptions.py
src/domain/models/: __init__.py  entities.py  enums.py  etl_definitions.py  schemas.py  state_machine.py
src/domain/ports/: endpoints_port.py  logger_port.py  query_port.py  registry_port.py
src/domain/services/: __init__.py  dependency_resolver.py
src/ui/: app.py
src/ui/pages/: dashboard.py
tests/unit/adapters/: test_loggers.py
tests/unit/application/: test_coberturas.py  test_organizadores.py  test_primas_automotores.py  test_registry_and_orchestrator.py
tests/unit/domain/: test_available_sources.py  test_dependency_resolver.py  test_etl_process.py  test_exceptions.py  test_logging.py  test_state_machine.py
