[project]
name = "etl-manager"
version = "0.1.0"
description = "ETL Manager — MySQL, Excel, CSV → ClickHouse con Polars LazyFrames y NiceGUI"
requires-python = ">=3.13"
dependencies = [
    "nicegui>=3.0",
    "polars>=1.39.3",
    "fastparquet>=2026.3.0",
    "clickhouse-connect>=0.15.1",
    "connectorx>=0.4.5",
    "python-dotenv>=1.2.2",
    "fastexcel>=0.19.0",
    "jinja2>=3.1.6",
    "nicegui>=3.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio",
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
]
